@@ -28,6 +28,7 @@ import org.knowm.xchange.currency.CurrencyPair;
 import org.knowm.xchange.dto.marketdata.Ticker;
 import org.knowm.xchange.exceptions.ExchangeException;
 import org.knowm.xchange.exceptions.NotYetImplementedForExchangeException;
+import org.knowm.xchange.instrument.Instrument;
 import org.knowm.xchange.service.marketdata.MarketDataService;
 import org.knowm.xchange.service.marketdata.params.CurrencyPairsParam;
 import org.knowm.xchange.service.marketdata.params.Params;
@@ -58,7 +59,9 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
     private static Set<String> SUPPORTED_CRYPTO_CURRENCIES = new HashSet<>();
     private static Set<String> SUPPORTED_FIAT_CURRENCIES = new HashSet<>();
     private final Set<String> providerExclusionList = new HashSet<>();
+    @Getter
     private final String name;
+    @Getter
     private final String prefix;
     private final Environment env;
     @Getter
@@ -78,7 +81,7 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
                 providerExclusionList.add(splits[1]);
             }
         }
-        if (providerExclusionList.size() > 0) {
+        if (!providerExclusionList.isEmpty()) {
             log.info("{} specific exclusion list={}", name, providerExclusionList);
         }
     }
@@ -91,7 +94,7 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
             String validatedExclusionList = excludedFiatCurrencies.stream()
                     .filter(ccy -> !ccy.isEmpty())
                     .filter(CurrencyUtil::isFiatCurrency)
-                    .collect(Collectors.toList()).toString();
+                    .toList().toString();
             SUPPORTED_FIAT_CURRENCIES = CurrencyUtil.ALL_FIAT_CURRENCIES.stream()
                     .filter(ccy -> !validatedExclusionList.contains(ccy.toUpperCase()))
                     .collect(Collectors.toSet());
@@ -112,7 +115,7 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
             String validatedExclusionList = excludedCryptoCurrencies.stream()
                     .filter(ccy -> !ccy.isEmpty())
                     .filter(CurrencyUtil::isCryptoCurrency)
-                    .collect(Collectors.toList()).toString();
+                    .toList().toString();
             SUPPORTED_CRYPTO_CURRENCIES = CurrencyUtil.ALL_CRYPTO_CURRENCIES.stream()
                     .filter(ccy -> !validatedExclusionList.contains(ccy.toUpperCase()))
                     .collect(Collectors.toSet());
@@ -123,14 +126,6 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
         return SUPPORTED_CRYPTO_CURRENCIES.stream()
                 .filter(ccy -> !providerExclusionList.contains(ccy.toUpperCase()))
                 .collect(Collectors.toSet());
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public String getPrefix() {
-        return prefix;
     }
 
     public void maybeClearStaleRates() {
@@ -185,7 +180,10 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
         MarketDataService marketDataService = exchange.getMarketDataService();
 
         // Retrieve all currency pairs supported by the exchange
-        List<CurrencyPair> allCurrencyPairsOnExchange = exchange.getExchangeSymbols();
+        List<Instrument> allCurrencyPairsOnExchange = exchange.getExchangeInstruments()
+                .stream()
+                .filter(CurrencyPair.class::isInstance)
+                .toList();
 
         // Find out which currency pairs we are interested in polling ("desired pairs")
         // This will be the intersection of:
@@ -194,17 +192,17 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
         // This will result in two lists of desired pairs (fiat and alts)
 
         // Find the desired fiat pairs (pair format is BTC-FIAT)
-        List<CurrencyPair> desiredFiatPairs = allCurrencyPairsOnExchange.stream()
-                .filter(cp -> cp.base.equals(Currency.BTC))
-                .filter(cp -> getSupportedFiatCurrencies().contains(cp.counter.getCurrencyCode()) ||
+        List<Instrument> desiredFiatPairs = allCurrencyPairsOnExchange.stream()
+                .filter(cp -> cp.getBase().equals(Currency.BTC))
+                .filter(cp -> getSupportedFiatCurrencies().contains(cp.getCounter().getCurrencyCode()) ||
                         // include also stablecoins, which are quoted fiat-like.. see below isInverted()
-                        getSupportedCryptoCurrencies().contains(translateToBisqCurrency(cp.counter.getCurrencyCode())))
+                        getSupportedCryptoCurrencies().contains(translateToBisqCurrency(cp.getCounter().getCurrencyCode())))
                 .collect(Collectors.toList());
 
         // Find the desired altcoin pairs (pair format is ALT-BTC)
-        List<CurrencyPair> desiredCryptoPairs = allCurrencyPairsOnExchange.stream()
-                .filter(cp -> cp.counter.equals(Currency.BTC))
-                .filter(cp -> getSupportedCryptoCurrencies().contains(cp.base.getCurrencyCode()))
+        List<Instrument> desiredCryptoPairs = allCurrencyPairsOnExchange.stream()
+                .filter(cp -> cp.getCounter().equals(Currency.BTC))
+                .filter(cp -> getSupportedCryptoCurrencies().contains(cp.getBase().getCurrencyCode()))
                 .collect(Collectors.toList());
 
         // Retrieve in bulk all tickers offered by the exchange
@@ -224,11 +222,9 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
                  * - some will ignore it (and retrieve all available tickers)
                  * - some will require it (and will fail if a null or empty list is given)
                  * - some will properly handle it
-                 *
                  * We take a simplistic approach, namely:
                  * - for providers that require such a filter, specify one
                  * - for all others, do not specify one
-                 *
                  * We make this distinction using
                  * {@link ExchangeRateProvider#requiresFilterDuringBulkTickerRetrieval}
                  *
@@ -242,6 +238,8 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
                     if (requiresFilterDuringBulkTickerRetrieval()) {
                         return Stream.of(desiredFiatPairs, desiredCryptoPairs)
                                 .flatMap(Collection::stream)
+                                .filter(CurrencyPair.class::isInstance)
+                                .map(CurrencyPair.class::cast)
                                 .collect(Collectors.toList());
                     }
 
@@ -281,12 +279,19 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
                                 Thread.sleep(getMarketDataCallDelay());
                             }
 
-                            Ticker ticker = marketDataService.getTicker(cp);
-                            finalTickersRetrievedFromExchange.add(ticker);
-
+                            try {
+                                Ticker ticker = marketDataService.getTicker(cp);
+                                finalTickersRetrievedFromExchange.add(ticker);
+                            } catch (NotYetImplementedForExchangeException ex) {
+                                // use fallback only for this specific pair
+                                if (cp instanceof CurrencyPair) {
+                                    Ticker ticker = marketDataService.getTicker((CurrencyPair) cp);
+                                    finalTickersRetrievedFromExchange.add(ticker);
+                                }
+                            }
                         } catch (IOException | InterruptedException ioException) {
                             ioException.printStackTrace();
-                            log.error("Could not query tickers for " + getName(), e);
+                            log.error("Could not query tickers for {}", getName(), e);
                         }
                     });
         } catch (ExchangeException | // Errors reported by the exchange (rate limit, etc)
@@ -298,15 +303,15 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
             // Catch and handle all other possible exceptions
             // If there was a problem with polling this exchange, return right away,
             // since there are no results to parse and process
-            log.error("Could not query tickers for provider " + getName(), e);
+            log.error("Could not query tickers for provider {}", getName(), e);
             return result;
         }
 
         // Create an ExchangeRate for each desired currency pair ticker that was retrieved
-        Predicate<Ticker> isDesiredFiatPair = t -> desiredFiatPairs.contains(t.getCurrencyPair());
-        Predicate<Ticker> isDesiredCryptoPair = t -> desiredCryptoPairs.contains(t.getCurrencyPair());
-        Predicate<Ticker> isInverted = t -> desiredFiatPairs.contains(t.getCurrencyPair()) &&
-                getSupportedCryptoCurrencies().contains(translateToBisqCurrency(t.getCurrencyPair().counter.getCurrencyCode()));
+        Predicate<Ticker> isDesiredFiatPair = t -> desiredFiatPairs.contains(t.getInstrument());
+        Predicate<Ticker> isDesiredCryptoPair = t -> desiredCryptoPairs.contains(t.getInstrument());
+        Predicate<Ticker> isInverted = t -> desiredFiatPairs.contains(t.getInstrument()) &&
+                getSupportedCryptoCurrencies().contains(translateToBisqCurrency(t.getInstrument().getCounter().getCurrencyCode()));
         tickersRetrievedFromExchange.stream()
                 .filter(isDesiredFiatPair.or(isDesiredCryptoPair)) // Only consider desired pairs
                 .forEach(t -> {
@@ -320,10 +325,10 @@ public abstract class ExchangeRateProvider extends PriceProvider<Set<ExchangeRat
                     // In every Bisq ExchangeRate, BTC is one currency in the pair
                     // Extract the other currency from the ticker, to create ExchangeRates
                     String otherExchangeRateCurrency;
-                    if (t.getCurrencyPair().base.equals(Currency.BTC)) {
-                        otherExchangeRateCurrency = t.getCurrencyPair().counter.getCurrencyCode();
+                    if (t.getInstrument().getBase().equals(Currency.BTC)) {
+                        otherExchangeRateCurrency = t.getInstrument().getCounter().getCurrencyCode();
                     } else {
-                        otherExchangeRateCurrency = t.getCurrencyPair().base.getCurrencyCode();
+                        otherExchangeRateCurrency = t.getInstrument().getBase().getCurrencyCode();
                     }
 
                     BigDecimal last = t.getLast();
